Icons for upvote and downvote

--- a/RedditService_Data/RedditService_Data.csproj
+++ b/RedditService_Data/RedditService_Data.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Topic.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserVote.cs" />
+    <Compile Include="UserVoteComment.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
